2013-04-17  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Wizard to import Sphinx in EM
	* [TASK] Prototyping