@@ -1,0 +1,30 @@
+========================================
+Sphinx Python Documentation Generator
+========================================
+
+This is the README file of the TYPO3 extension sphinx.
+
+
+
+Requirements
+============
+
+- Python
+- Unzip
+
+
+
+Installation & Use
+==================
+
+1. Configure the extension from Extension Manager
+2. Invoke sphinx-builder on your project. Example in Resources/Public/DemoSphinxProject
+   to be compiled from your extension with:
+
+::
+
+	Tx_Sphinx_Utility_SphinxBuilder::buildHtml(
+		t3lib_extMgm::extPath('sphinx') . 'Resources/Public/DemoSphinxProject',
+		'source',
+		'build'
+	);
