@@ -1,0 +1,22 @@
+.. Demo Project documentation master file, created by
+   sphinx-quickstart on Wed Apr 17 17:25:23 2013.
+   You can adapt this file completely to your liking, but it should at least
+   contain the root `toctree` directive.
+
+Welcome to Demo Project's documentation!
+========================================
+
+Contents:
+
+.. toctree::
+   :maxdepth: 2
+
+
+
+Indices and tables
+==================
+
+* :ref:`genindex`
+* :ref:`modindex`
+* :ref:`search`
+
