@@ -1,4 +1,5 @@
 2013-04-17  Xavier Perseguers  <xavier@causal.ch>
 
+	* [TASK] Add Sphinx-Builder service
 	* [TASK] Wizard to import Sphinx in EM
 	* [TASK] Prototyping
